[package]
name = "brane-log"
edition = "2018"
rust-version = "1.74.1"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.0"
async-stream = "0.3.0"
bincode = "1.3.0"
bytes = "1.0.0"
clap = { version = "4.0.24", features = ["derive","env"] }
derive_more = "0.99.0"
dotenvy = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.0"
juniper = "0.15.0"
juniper_graphql_ws = "0.3.0"
juniper_warp = { version = "0.7.0", features = ["subscriptions"] }
log = "0.4.0"
prost = "0.11.0"
rdkafka = { version = "0.31.0", features = ["cmake-build"] }
scylla = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.0", features = ["formatting"] }
tokio = { version = "1.0.0", features = ["full"] }
warp = "0.3.0"
