[package]
name = "brane-oas"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[dependencies]
anyhow = "1.0.66"
backoff = { version = "0.3.0", features = ["tokio"] }
brane-exe = { path = "../brane-exe" }
cookie = "0.15.0"
cookie_store = "0.15.0"
log = "0.4.17"
maplit = "1.0"
openapiv3 = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json", "cookies", "blocking"] }
reqwest_cookie_store = "0.2.0"
serde = "1.0.195"
serde_json = "1.0.87"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
specifications = { path = "../specifications" }
