[package]
name = "brane-oas"
edition = "2018"
rust-version = "1.67.1"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.66"
backoff = { version = "0.3.0", features = ["tokio"] }
brane-exe = { path = "../brane-exe" }
cookie = "0.15.0"
cookie_store = "0.15.0"
log = "0.4.22"
maplit = "1.0"
openapiv3 = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json", "cookies", "blocking"] }
reqwest_cookie_store = "0.2.0"
serde = "1.0.204"
serde_json = "1.0.120"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
specifications = { path = "../specifications" }
