[package]
name = "brane-plr"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

[dependencies]
async-recursion = "1.0.0"
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.10"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
futures-util = "0.3"
log = "0.4"
parking_lot = "0.12"
prost = "0.11"
rand = "0.8.5"
rdkafka = { version = "0.31", features = ["cmake-build"] }
reqwest = "0.11"
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1"
tonic = "0.9"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-prx = { path = "../brane-prx" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
