[package]
name = "brane-plr"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
rust-version = "1.74.1"

[dependencies]
async-recursion = "1.0.0"
clap = { version = "4.4.0", features = ["derive","env"] }
dotenvy = "0.15.0"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
futures-util = "0.3.30"
log = "0.4.21"
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = "0.11.27"
serde_json = "1.0.117"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1.6"
tonic = "0.11.0"
warp = "0.3.0"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-prx = { path = "../brane-prx" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
