[package]
name = "brane-plr"
edition = "2021"
rust-version = "1.74"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-recursion = "1.0.0"
clap = { version = "4.5.6", features = ["derive","env"] }
dotenvy = "0.15.0"
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
futures-util = "0.3.30"
log = "0.4.22"
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = "0.11.27"
serde_json = "1.0.120"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "signal"] }
tokio-stream = "0.1.6"
tonic = "0.11.0"
warp = "0.3.2"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-prx = { path = "../brane-prx" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
