[package]
name = "brane-prx"
version = { workspace = true }
edition = "2021"
authors = [ "Lut99" ]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.24", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.10"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
log = "0.4"
never-say-never = "6.6.666"
reqwest = { version = "0.11", features = ["json"] }
rustls = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socksx = { git = "https://github.com/epi-project/socksx" }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "signal"] }
tokio-rustls = "0.24"
tonic = "0.11"
url = "2.2"
warp = "0.3"

brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
