[package]
name = "brane-prx"
edition = "2021"
authors = [ "Tim Müller" ]
rust-version = "1.74.1"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.5.6", features = ["derive","env"] }
dotenvy = "0.15"
env_logger = "0.10.0"
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
log = "0.4.22"
never-say-never = "6.6.666"
reqwest = { version = "0.11.27", features = ["json"] }
rustls = "0.21.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
socksx = { git = "https://github.com/epi-project/socksx", tag = "v2.0.0" }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "signal"] }
tokio-rustls = "0.24.0"
tonic = "0.11.0"
url = "2.5.0"
warp = "0.3.0"

brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
