[package]
name = "brane-reg"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]
rust-version = "1.74.1"

[dependencies]
base64 = "0.21"
clap = { version = "4.0.24", features = ["derive","env"] }
deliberation = { git = "https://github.com/epi-project/policy-reasoner" }
dotenvy = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug" }
env_logger = "0.10"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
k8s-openapi = { version = "0.18", default-features = false, features = ["v1_23"] }
log = "0.4"
reqwest = "0.11"
rustls = "0.21"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tempfile = "3.2"
tokio = { version = "1", features = ["rt","rt-multi-thread","macros","io-util", "signal"] }
tokio-rustls = "0.24"
tokio-stream = "0.1"
warp = "0.3"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
