[package]
name = "brane-reg"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]

[dependencies]
base64 = "0.21.0"
clap = { version = "4.4.0", features = ["derive","env"] }
deliberation = { git = "https://github.com/epi-project/policy-reasoner" }
dotenvy = "0.15.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug" }
env_logger = "0.10.0"
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
k8s-openapi = { version = "0.18", default-features = false, features = ["v1_23"] }
log = "0.4.17"
reqwest = "0.11.27"
rustls = "0.21.6"
serde = { version = "1.0.195", features = ["rc"] }
serde_json = "1.0.87"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tempfile = "3.3.0"
tokio = { version = "1.38.0", features = ["rt","rt-multi-thread","macros","io-util", "signal"] }
tokio-rustls = "0.24.0"
tokio-stream = "0.1.6"
warp = "0.3.0"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
