[package]
name = "brane-reg"
edition = "2021"
authors = [ "Tim Müller" ]
rust-version = "1.74.1"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
base64 = "0.21.0"
clap = { version = "4.5.6", features = ["derive","env"] }
deliberation = { git = "https://github.com/epi-project/policy-reasoner" }
dotenvy = "0.15.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0" }
env_logger = "0.10.0"
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
log = "0.4.22"
reqwest = "0.11.27"
rustls = "0.21.6"
serde = { version = "1.0.204", features = ["rc"] }
serde_json = "1.0.120"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["rt","rt-multi-thread","macros","io-util", "signal"] }
tokio-rustls = "0.24.0"
tokio-stream = "0.1.6"
warp = "0.3.0"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
