[package]
name = "brane-shr"
version = { workspace = true }
authors = { workspace = true }
edition = "2018"

[dependencies]
async-compression = { version = "0.3.15", features = ["tokio","gzip"] }
console = "0.15"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
futures-util = "0.3"
hex = "0.4.3"
indicatif = "0.17"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rdkafka = { version = "0.29", features = ["cmake-build"] }
regex = "1.5"
reqwest = { version = "0.11", features = ["stream"] }
sha2 = "0.10.6"
tokio = { version = "1.20", features = ["rt","macros"] }
tokio-stream = "0.1"
tokio-tar = "0.3.0"
url = "2.2"

specifications = { path = "../specifications" }

[dev-dependencies]
getrandom = "0.2.8"
tempfile = "3.2"
