[package]
name = "brane-tsk-c"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
description = "Wrapper around `brane-tsk` that provides C-bindings. This allows C-programs to act as a BRANE client."


[lib]
name       = "brane_tsk"
crate-type = ["rlib", "cdylib"]


[dependencies]
brane-tsk = { path = "../brane-tsk" }
