[package]
name = "brane-tsk-c"
version = { workspace = true }
edition = "2021"
authors = { workspace = true }
description = "Wrapper around `brane-tsk` that provides C-bindings. This allows C-programs to act as a BRANE client."


[lib]
name       = "brane_tsk"
crate-type = ["rlib", "cdylib"]


[dependencies]
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
libc = "0.2"
log = "0.4"
serde_json = "1.0"
tokio = "1.28"

brane-ast = { path = "../brane-ast" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
