[package]
name = "brane-tsk"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]


[[example]]
path = "./examples/cli.rs"
name = "cli"


[dependencies]
async-trait = "0.1"
base64 = "0.21"
base64ct = { version = "1.5.3", features = ["alloc"] }
bollard = "0.14"
chrono = "0.4"
console = "0.15"
dialoguer = "0.11"
enum-debug = { git = "https://github.com/Lut99/enum-debug", features = ["derive"] }
futures-util = "0.3"
graphql_client = "0.13"
hex-literal = "0.4"
hyper = "0.14"
indicatif = "0.17"
# k8s-openapi = { version = "0.18", default_features = false, features = ["v1_23"] }
# kube = { version = "0.83", default_features = false, features = ["client", "runtime", "rustls-tls"] }
log = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
prost = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["rustls-tls-manual-roots","json","stream","multipart"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10.6"
tokio = "1"
tokio-tar = "0.3.0"
tokio-util = "0.7"
tonic = "0.11"
uuid = { version = "1.7", features = ["v4"] }

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }


[dev-dependencies]
clap = { version = "4.2", features = ["derive"] }
dirs-2 = "3.0"
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
lazy_static = "1.4"
shellexpand = "3.1"


# [build-dependencies]
# tonic-build = "0.8"
