[package]
name = "brane-tsk"
edition = "2021"
rust-version = "1.73"
authors = [ "Tim Müller" ]
version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
async-trait = "0.1.67"
base64 = "0.21.0"
base64ct = { version = "1.6.0", features = ["alloc"] }
bollard = "0.14.0"
chrono = "0.4.35"
console = "0.15.5"
dialoguer = "0.11.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
futures-util = "0.3.30"
graphql_client = "0.13.0"
hyper = "0.14.29"
indicatif = "0.17.0"
log = "0.4.22"
num-traits = "0.2.18"
parking_lot = "0.12.1"
prost = "0.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["rustls-tls-manual-roots","json","stream","multipart"] }
serde = "1.0.204"
serde_json = "1.0.120"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
sha2 = "0.10.6"
tokio = "1.38.0"
tokio-tar = "0.3.0"
tokio-util = "0.7.1"
tonic = "0.11.0"
uuid = { version = "1.7.0", features = ["v4"] }

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }


[dev-dependencies]
clap = { version = "4.4.0", features = ["derive"] }
humanlog = { git = "https://github.com/Lut99/humanlog-rs", tag = "v0.1.0" }
lazy_static = "1.4.0"


# [build-dependencies]
# tonic-build = "0.8"
