[package]
name = "specifications"
rust-version = "1.73"
edition = "2018"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.67"
base64 = "0.21.0"
base64ct = { version = "1.6.0", features = ["std"] }
chrono = { version = "0.4.35", features = ["serde"] }
const_format = "0.2.22"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0", features = ["derive"] }
futures = "0.3.24"
# lazy_static = "1.4.0"
jsonwebtoken = "9.2.0"
log = "0.4.22"
num-traits = "0.2.18"
parking_lot = { version = "0.12.1", features = ["serde"] }
prost = "0.12.0"
reqwest = { version = "0.11.27", features = ["json", "stream"] }
semver = "1.0.0"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.120"
serde_test = "1.0.0"
serde_with = "3.0.0"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
strum = "0.24.0"
strum_macros = "0.24.0"
tonic = "0.11.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
